--- a/css/style.css
+++ b/css/style.css
@@ -9799,3 +9799,67 @@ h2.heading {
     border-left: 5px solid #46a2b9;
     /* height: 204px; */
 }
+
+ul.list {
+    list-style: lower-roman;
+    padding: 15px 35px;
+}
+
+ul.list li {
+	padding: 15px;
+}
+
+/* Technology */
+
+.boximageicon-seo {
+	padding: 0 10px 10px;
+	margin-right: 30px;
+	background: #fff;
+	border-radius: 5px;
+	font-size: 40px;
+}
+
+.boximageicon-seo img {
+	width: 40px;
+	height: 40px;
+}
+
+.p-50 {
+	padding: 50px!important;
+}
+
+.backgroundwhite-tabsd {
+	-webkit-box-shadow: 0 10px 45px -9px rgb(0 0 0 / 20%);
+	-moz-box-shadow: 0 10px 45px -9px rgba(0,0,0,.2);
+	box-shadow: 0 10px 45px -9px rgb(0 0 0 / 20%);
+}
+
+.boxseo-data img {
+	width: 70px;
+	display: inline-block;
+}
+
+.boxseo-data h3 {
+	padding-left: 15px;
+	display: inline-block;
+	margin-bottom: 0;
+	vertical-align: middle;
+}
+
+.language-tabs {
+	border-bottom: 1px solid transparent;
+}
+
+.language-tabs li {
+	margin-left: 0px;
+}
+
+.fade.in {
+	opacity: 1;
+}
+
+.tab-body {
+	background-color: #fff;
+	border-radius: 5px;
+	padding: 50px;
+}
