--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1101,37 +1101,37 @@
 
     /**start update 2.0**/
     h1 {
-        font-size: 38px;
+        font-size: 32px;
         line-height: 48px;
     }
 
     h2 {
-        font-size: 34px;
+        font-size: 28px;
         line-height: 44px;
     }
 
     h3 {
-        font-size: 30px;
+        font-size: 24px;
         line-height: 40px;
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 18px;
         line-height: 30px;
     }
 
     h5 {
-        font-size: 18px;
+        font-size: 16px;
         line-height: 28px;
     }
 
     h6 {
-        font-size: 16px;
+        font-size: 15px;
         line-height: 26px;
     }
 
     p {
-        font-size: 17px;
+        font-size: 14px;
         line-height: 28px;
     }
 
@@ -1607,12 +1607,12 @@
     }
 
     h4 {
-        font-size: 20px;
+        font-size: 18px;
         line-height: 30px
     }
 
     h5 {
-        font-size: 18px;
+        font-size: 17px;
         line-height: 26px
     }
 
@@ -1722,5 +1722,197 @@
     .locations {
         grid-template-columns: repeat(1, 1fr);
         grid-gap: 30px;
+    }
+}
+
+/* Custom */
+
+@media only screen and (max-width:767px) {
+
+    h1 {
+        font-size: 28px;
+        line-height: 36px;
+    }
+
+    h2 {
+        font-size: 24px;
+        line-height: 32px;
+    }
+
+    h3 {
+        font-size: 22px;
+        line-height: 30px;
+    }
+
+    h4 {
+        font-size: 18px;
+        line-height: 28px;
+    }
+
+    h5 {
+        font-size: 16px;
+        line-height: 26px;
+    }
+
+    h6 {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    p {
+        font-size: 13px;
+        line-height: 22px;
+    }
+
+    /* Service */
+
+
+    .hero-heading-sec2 h3 {
+        font-size: 30px;
+        line-height: 40px;
+    }
+
+    .hero-heading-sec2 > p1 {
+        margin: 40px 0 20px;
+    }
+
+    .hero-heading-sec2 > p2 {
+        margin: 20px 0;
+    }
+
+    h2.common-heading {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .custom-app-dev {
+        height: 210px;
+    }
+
+    .about-sec-app .card {
+        margin-bottom: 15px;
+    }
+
+    .box {
+        width: 100%;
+    }
+
+    .features-heading {
+        padding-top: 15px;
+        text-align: center;
+    }
+
+    .features-text {
+        text-align: center;
+    }
+
+    .custom h2 {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .custom p {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .process h2 {
+        padding-bottom: 10px;
+    }
+
+    .number {
+        font-size: 32px;
+        width: 27%;
+        margin-left: 0px;
+    }
+
+    .process-title {
+        width: 73%;
+        margin-left: 0;
+        font-size: 18px;
+    }
+
+    .process-card {
+        margin-bottom: 10px;
+    }
+
+    .ideal h2 {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .ideal p {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+
+    .ideal a {
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .tab-content {
+        margin-top: 40px;
+    }
+
+    .tab-body {
+        padding: 35px;
+    }
+
+    .benefits-cards {
+        margin-bottom: 15px;
+    }
+
+    .key-desc {
+        text-align: center;
+    }
+
+    .numbersOfSatisfy {
+        padding: 40px 0px 0px;
+    }
+
+    .blogs-section h3 {
+        text-align: center;
+    }
+
+    .single-card-item {
+        margin-top: 40px;
+    }
+
+    .center-dots .owl-dots {
+        margin: 15px auto;
+    }
+
+    .schedule {
+        margin-bottom: 30px !important;
+    }
+
+    .client-name, .client-post, .client-desc {
+        text-align: center;
+    }
+
+    .text-fieds- {
+        width: 100% !important;
+    }
+
+    .contact-us-block {
+        margin-top: 20px;
+        margin-left: 0px;
+        padding: 30px;
+    }
+
+    .submitFormBtn {
+        margin: 0 auto;
+        display: block;
+    }
+
+    .startAprojectBtn { 
+        margin: 0 auto;
+        display: block;
+    }
+
+    .deliver h3 {
+        text-align: center;
+        padding-bottom: 10px;
     }
 }
