--- a/css/style.css
+++ b/css/style.css
@@ -2697,7 +2697,7 @@ footer.ftshap:before {
 	box-shadow: 0 3.4px 2.7px -30px rgba(0, 0, 0, 0.059), 0 8.2px 8.9px -30px rgba(0, 0, 0, 0.071), 0 25px 40px -30px rgba(0, 0, 0, 0.2);
 }
 
-.techonology-used- {
+.techonology-used {
 	text-align: left;
 	background: #fff;
 }
@@ -6448,9 +6448,9 @@ html .pb140 {
 
 .bg-gradient12 {
 	background: #3f36b9;
-	background: -moz-linear-gradient(left, #552ecd 0%,#13137a 100%);
-	background: -webkit-linear-gradient(left,#552ecd 0%,#13137a 100%);
-	background: linear-gradient(to right, #552ecd 0%,#13137a 100%);
+	background: -moz-linear-gradient(left, #3E7899 0%,#06080A 100%);
+	background: -webkit-linear-gradient(left,#3E7899 0%,#06080A 100%);
+	background: linear-gradient(to right, #3E7899 0%,#06080A 100%);
 }
 
 .bg-gradient13 {
@@ -9688,6 +9688,94 @@ input {
 
 /* Custom */
 
+
+/* Home */
+
+/* Case Study */
+
+.first-cs {
+	background: linear-gradient(to right,#eb3740 0,#a3141a 100%);
+}
+
+.second-cs {
+	background: linear-gradient(to right,#00b4e0 0,#0a5bc7 100%);
+}
+
+.third-cs {
+	background: linear-gradient(to right,#009f98 0,#63c9bd 100%);
+}
+
+.fourth-cs {
+	background: linear-gradient(to right,#73cf36 0,#10b4dd 100%);
+}
+
+.fifth-cs {
+	background: linear-gradient(to right,#e73330 0,#ef4b23 100%);
+}
+
+.sixth-cs {
+	background: linear-gradient(to right,#ef4b51 0,#d72f35 100%);
+}
+
+.cs-slider .owl-stage {
+    min-height: 100vh;
+}
+
+.cs-slider .owl-item img {
+    width: auto;
+}
+
+.scrollHalf {
+	position: relative;
+	overflow: hidden;
+}
+
+.scrollHalf__grupo {
+	position: relative;
+	height: 100vh;
+}
+
+.scrollHalf__grupo__imagen {
+	overflow: hidden;
+}
+
+.scrollHalf__grupo__contenido {
+	padding: 3rem;
+}
+
+.scrollHalf__grupo[data-scroll="out"] {
+	opacity: 0;
+}
+
+.scrollHalf__grupo[data-scroll="in"] {
+	opacity: calc(var(--visible-y)*1.9);
+}
+
+
+.list_cat {
+	list-style: none;
+	padding: 0;
+	margin: 30px 0;
+	text-align: left;
+}
+
+.list_cat li {
+	background: #f5f7fa;
+	border-radius: 50px;
+	padding: 10px 15px;
+	color: #282526;
+	font-size: 14px;
+	line-height: 18px;
+	font-family: Gilroy-Light;
+	display: inline-block;
+	margin-right: 8px;
+}
+
+.halfSideImg {
+	width: 50%;
+}
+
+
 /* Award */
 
 .award-item {
@@ -9755,10 +9843,6 @@ input {
     width: 54px;
     background-color: #F7F8F7;
     border-radius: 50%;
-}
-
-.custom-app-dev {
-	height: 190px;
 }
 
 .custom-app-dev:hover {
@@ -9833,15 +9917,18 @@ input {
 }
   
 .text {
-	color: white;
 	line-height: 20px;
 	position: absolute;
-	top: 50%;
-	left: 50%;
+	top: 30%;
+	left: 35%;
 	-webkit-transform: translate(-50%, -50%);
 	-ms-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
-	text-align: center;
+	text-align: left;
+}
+
+.text h5, .text p {
+	color: white;
 }
 
 .image-icon {
