--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2255,6 +2255,11 @@
     .deliveries-section h2 {
         text-align: center !important;
     }
+
+    .our-process-card {
+        margin-bottom: 0px;
+        height: 425px;
+    }
 }
 
 @media only screen and (min-width:1440px) {
