--- a/css/style.css
+++ b/css/style.css
@@ -9850,7 +9850,7 @@ input {
 }
 
 .portfolio-filter .pf-item:hover .pf-text {
-	bottom: 25px;
+	bottom: 20%;
 }
 
 .portfolio-filter .pf-item:hover .pf-text h4 {
@@ -9866,16 +9866,16 @@ input {
 .portfolio-filter .pf-item .pf-text {
 	text-align: center;
 	position: absolute;
-	left: 0;
-	bottom: -100px;
-	width: 100%;
+	left: 10%;
+	bottom: -600px;
+	width: 80%;
 }
 
 .portfolio-filter .pf-item .pf-text h4 {
 	color: #ffffff;
 	font-weight: 700;
 	text-align: center;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 	position: relative;
 	top: 20px;
 	-webkit-transition: all 0.4s;
@@ -9884,13 +9884,14 @@ input {
 }
 
 .portfolio-filter .pf-item .pf-text span {
-	font-size: 15px;
-	color: #009603;
+	font-size: 16px;
+	color: #fff;
 	position: relative;
 	top: 40px;
 	-webkit-transition: all 0.6s;
 	-o-transition: all 0.6s;
 	transition: all 0.6s;
+	line-height: 1.5;
 }
 
 .portfolio-filter .pf-item.large-width {
